
Changed
~~~~~~~

- The `tor_identity` userscript now takes the password via a `-p` flag and has
  a new `-c` flag to customize the Tor control port.
- `:config-write-py` now adds a note about `config.py` files being targeted at
  advanced users.
- `:report` now takes two optional arguments for bug/contact information, so
  that it can be used without the report window popping up.
- The `fonts.tabs` setting has been split into
  `fonts.tabs.{selected,unselected}` (see below).

Added
~~~~~

- New settings:
  * `logging.level.ram` and `logging.level.console` to configure the default
    logging levels via the config.
  * `fonts.tabs.selected` and `fonts.tabs.unselected` to set the font of the
    selected tab independently from unselected tabs (e.g. to make it bold).

Fixed
~~~~~

- Crash when `tabs.focus_stack_size` is set to -1.
- Crash when a `pdf.js` file for PDF.js exists, but `viewer.html` does not.
- `:config-write-py` now works with paths starting with `~/...` again.
- New site-specific quirk for a missing `globalThis` in Qt <= 5.12 on Reddit and Spotify

v1.12.0 (2020-06-01)
--------------------

Removed
~~~~~~~

- `tox -e mkvenv` which was deprecated in qutebrowser v1.10.0 is now
  removed. Use the `mkvenv.py` script instead.
- Support for using `config.bind(key, None)` in `config.py` to unbind a
  key was deprecated in v1.8.2 and is now removed. Use
  `config.unbind(key)` instead.
- `:yank markdown` was deprecated in v1.7.0 and is now removed. Use
  `:yank inline [{title}]({url})` instead.

Added
~~~~~

- New `:debug-keytester` command, which shows a "key tester" widget.
  Previously, that was only available as a separate application via `python3 -m
  scripts.keytester`.
- New `:config-diff` command which opens the `qute://configdiff` page.
- New `--debug-flag log-cookies` to log cookies to the debug log.
- New `colors.contextmenu.disabled.{fg,bg}` settings to customize colors for
  disabled items in the context menu.