@@ -1565,10 +1565,8 @@ statusbar.show:
     name: String
     valid_values:
     - always: Always show the statusbar.
-    - never: Always hide the statusbar unless a message is shown.
-    - in-mode: >- 
-        Only show the statusbar when in modes other than normal mode or
-        when a message is shown.
+    - never: Always hide the statusbar.
+    - in-mode: Show the statusbar when in modes other than normal mode.
   desc: When to show the statusbar.
 
 statusbar.padding:
